--- a/client/src/components/PostList/postList.css
+++ b/client/src/components/PostList/postList.css
@@ -1,3 +1,8 @@
+.no-posts{
+   text-align: center;
+   height: 200px;
+   font-size: xx-large;
+}
 .postlist-container {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    display: flex;
